SystemUI: Add tuner option to show battery percentage only
Until we get battery styles.

Bolt while charging inspired by a change from ezio84 <brabus84@gmail.com>:
https://github.com/ezio84/abc_frameworks_base/commit/1f915e971f57f75cd71ad88411ca6e2037e1fcae

Change-Id: Ib02ae13b337e9498aedbdc9818d56dd0ac466a80

--- a/packages/SystemUI/res/values/tequila_strings.xml
+++ b/packages/SystemUI/res/values/tequila_strings.xml
@@ -38,4 +38,12 @@
 
     <!-- Face Unlock -->
     <string name="face_unlock_recognizing">Recognizing face...</string>
+
+    <!-- SysUI Tuner: Options for how battery is displayed [CHAR LIMIT=NONE] -->
+    <string-array name="battery_options_custom">
+        <item>Only show percentage (without icon)</item>
+        <item>Always show percentage (with icon)</item>
+        <item>Show percentage when charging (default)</item>
+        <item>Don\'t show this icon</item>
+    </string-array>
 </resources>
