--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -113,7 +113,7 @@
         android:icon="@*android:drawable/ic_battery"
         android:title="@string/battery"
         android:summary="%s"
-        android:entries="@array/battery_options" />
+        android:entries="@array/battery_options_custom" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:icon="@drawable/ic_statusbar_alarm"
