--- a/packages/SystemUI/res/layout/qs_footer_impl.xml
+++ b/packages/SystemUI/res/layout/qs_footer_impl.xml
@@ -34,13 +34,19 @@
             android:layout_height="@dimen/qs_footer_height"
             android:layout_gravity="center_vertical">
 
-            <View
-                android:id="@+id/dummy"
+            <TextView
+                android:id="@+id/build"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:paddingEnd="4dp"
                 android:layout_weight="1"
-                android:gravity="center_vertical" />
+                android:clickable="true"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:textAppearance="@style/TextAppearance.QS.Status.Build"
+                android:visibility="gone" />
 
             <com.android.systemui.qs.PageIndicator
                 android:id="@+id/footer_page_indicator"
